# teraclio

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  build_linux.sh  renovate.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: README.md  custom-filters.md  examples.md  installation.md  tera-basics.md  usage.md  use-cases.md
scripts/: e2e-teraclio.sh
src/: base64decode.rs  base64encode.rs  bytes2str.rs  cli.rs  engine.rs  error.rs  main.rs  str2bytes.rs  utils.rs
src/filters/: base64.rs  bytes.rs  case.rs  date.rs  escape.rs  hash.rs  mod.rs  regex.rs  serialize.rs  text.rs  url.rs  uuid.rs
tests/: cli_behavior.rs
