[package]
name = "teraclio"
version = "1.3.3"
edition = "2021"
authors = ["skitsanos"]
description = "A CLI tool for template rendering with Tera"
repository = "https://github.com/skitsanos/teraclio"
license = "MIT"
keywords = ["cli", "template", "tera", "json", "rendering"]
categories = ["command-line-utilities", "template-engine"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.49", features = ["derive"] }
serde_json = "1.0.145"
tera = "1.20.0"
base64 = "0.22.1"
anyhow = "1.0.100"

# Additional filters
md5 = "0.8"
sha1 = "0.10.6"
sha2 = "0.10.9"
urlencoding = "2.1.3"
html-escape = "0.2.13"
convert_case = "0.8"

# Input format support
serde_yaml = "0.9.34"
toml = "0.9.8"