[package]
name = "teraclio"
version = "2.0.0"
edition = "2021"
authors = ["skitsanos"]
description = "A CLI tool for template rendering with Tera"
repository = "https://github.com/skitsanos/teraclio"
license = "MIT"
keywords = ["cli", "template", "tera", "json", "rendering"]
categories = ["command-line-utilities", "template-engine"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
serde_json = "1.0.149"
tera = "1.20.1"
base64 = "0.22.1"
anyhow = "1.0.102"

# Additional filters
md5 = "0.8"
sha1 = "0.10.6"
sha2 = "0.11.0"
hmac = { version = "0.12.1", features = ["std"] }
urlencoding = "2.1.3"
html-escape = "0.2.13"
convert_case = "0.11.0"
regex = "1.12.3"
similar = "2.7.0"
chrono = "0.4.44"
uuid = { version = "1.23.0", features = ["v4"] }

# File watching
notify = "8.2.0"

# Input format support
serde_yaml = "0.9.34"
toml = "1.1.0"
